<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>aslam_incremental_calibration</name>
  <version>0.0.5</version>
  <description>
    A C++-based library for calibrating robot sensors.
  </description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/ethz-asl/aslam_incremental_calibration</url>
  <author email="jerome.maye@mavt.ethz.ch">Jerome Maye</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<!-- <build_depend>cmake_clang_tools</build_depend> -->-->

  <depend>aslam_backend</depend>
  <depend>eigen</depend>
  <depend>sm_eigen</depend>
  <depend>suitesparse</depend>
  <depend>tbb</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
