<?xml version="1.0"?>
<package format="2">
  <name>aslam_sparse_block_matrix</name>
  <version>0.0.5</version>
  <description>aslam_sparse_block_matrix</description>

  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>boost</depend>

  <depend>eigen</depend>
  <depend>sm_common</depend>
  <depend>sm_eigen</depend>
  <depend>suitesparse</depend>
  <depend>tbb</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
