<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>aslam_splines</name>
  <description>aslam_splines</description>
  <version>0.0.1</version>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <author>Paul Furgale</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_backend</depend>
  <depend>aslam_backend_expressions</depend>
  <depend>aslam_bsplines</depend>
  <depend>aslam_sparse_block_matrix</depend>
  <depend>sm_numpy_eigen</depend>
  <depend>sm_common</depend>
  <depend>sm_kinematics</depend>
  <depend>sm_timing</depend>
  <depend>suitesparse</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
